# SystemsProgramming

./: .gitignore  README.md
Classwork_1/: 123.cpp  123.h  main.cpp
ControlWork_1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp
ControlWork_1/ex10/: CMakeLists.txt  main.cpp
ControlWork_1/ex10/module/: module.cpp  module.h
ControlWork_1/ex9/: CMakeLists.txt  main.cpp
ControlWork_1/ex9/module/: module.cpp  module.h
ControlWork_2/: CMakeLists.txt  main.cpp  shopping_mall_classes_system_schema
ControlWork_2/Persons/: Client.cpp  Client.h  Employee.cpp  Employee.h  IPerson.cpp  IPerson.h  Inspector.cpp  Inspector.h
ControlWork_2/Shop/: Product.cpp  Product.h  Shop.cpp  Shop.h
ControlWork_2/ShoppingMall/: Floor.cpp  Floor.h  ShoppingMall.cpp  ShoppingMall.h
Practic_1/: README.md
Practic_10/ex1/: main.cpp  module.cpp  module.h
Practic_10/ex2/: main.cpp  module.cpp  module.h
Practic_11/ex1/: CMakeLists.txt  main.cpp
Practic_11/ex1/services/: coder.cpp  coder.h  decode.cpp  decode.h  encode.cpp  encode.h
Practic_11/ex2/: CMakeLists.txt  main.cpp
Practic_11/ex2/services/: calculate.cpp  calculate.h
Practic_11/game/: CMakeLists.txt  main.cpp
Practic_11/game/calls/: calls.cpp  calls.h  printing.cpp  printing.h
Practic_11/game/hospital/: hospital.cpp  hospital.h
Practic_11/game/location/: location.cpp  location.h
Practic_11/game/main_vars/: main_vars.cpp  main_vars.h  printing.cpp  printing.h
Practic_11/game/office/: office.cpp  office.h
Practic_11/game/printing/: printing.cpp  printing.h
Practic_11/game/services/: services.cpp  services.h
Practic_11/game/shop/: shop.cpp  shop.h
Practic_11/game/stamina/: stamina.cpp  stamina.h
Practic_12/: ex1.cpp  ex2.cpp  ex3.cpp
Practic_13/: README.md
Practic_14/ex1/: Human.cpp  Human.h  main.cpp
Practic_14/ex2/: CMakeLists.txt  Car.cpp  Car.h  main.cpp
Practic_14/ex3/: Animal.cpp  Animal.h  main.cpp
Practic_15/ex1/: CMakeLists.txt  Human.cpp  Human.h  enums.h  main.cpp
Practic_15/ex2/: Car.cpp  Car.h  main.cpp
Practic_15/ex3/: Animal.cpp  Animal.h  CMakeLists.txt  enums.h  main.cpp
Practic_16/: CMakeLists.txt  main.cpp
Practic_16/animal/: Animal.h
Practic_16/car/: Car.h  enums.h
Practic_16/human/: Human.cpp  Human.h
Practic_17/: main.cpp
Practic_17/animal/: Animal.cpp
Practic_17/car/: Car.h  PassangerCar.h  Truck.h
Practic_17/human/: Adult.cpp  Adult.h  Child.cpp  Child.h  Human.h
Practic_18/: CMakeLists.txt  main.cpp
Practic_18/animal/: Pet.cpp  Pet.h  Wild.cpp  Wild.h
Practic_18/car/: Car.cpp  PassangerCar.cpp  Truck.cpp
Practic_18/human/: Adult.cpp  Adult.h  Child.cpp  Child.h  Human.cpp  Human.h
Practic_19/: CMakeLists.txt  main.cpp
Practic_19/human/: Adult.cpp  Adult.h  Child.cpp  Child.h  Human.cpp  Human.h
Practic_19/validators/: validators.h
Practic_2/: ex1.cpp  ex10.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
Practic_20/: main.cpp
Practic_20/human/: Adult.cpp  Adult.h  Child.cpp  Child.h  Human.cpp  Human.h  Student.cpp  Student.h
Practic_20/validators/: validators.cpp
Practic_21/Theatre/: CMakeLists.txt  main.cpp  theatre_classes_system_schema
Practic_21/Theatre/Persons/: Actor.cpp  Actor.h  Client.cpp  Client.h  Critic.cpp  Critic.h  IEmployee.cpp  IEmployee.h  IPerson.cpp  IPerson.h
Practic_21/Theatre/Play/: Play.cpp  Play.h  Role.cpp  Role.h  Ticket.cpp  Ticket.h
Practic_21/Theatre/Theatre/: Hall.cpp  Hall.h  Theatre.cpp  Theatre.h
Practic_22/Task1/: CMakeLists.txt  main.cpp
Practic_22/Task1/classes/: Snack.cpp  Snack.h  SnackSlot.cpp  SnackSlot.h  VendingMachine.cpp  VendingMachine.h
Practic_22/Task2/: CMakeLists.txt  main.cpp
Practic_22/Task2/human/: Adult.cpp  Adult.h  Child.cpp  Child.h  Human.cpp  Human.h  Student.cpp  Student.h
Practic_3/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp
Practic_4/: ex1.cpp  ex10.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  main.cpp
Practic_5/: ex1.cpp  ex10.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
Practic_6/: README.md
Practic_7/: ex1.cpp  ex10.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
Practic_7/my_package/: funcs.cpp  funcs.h
Practic_8/: ex1.cpp  ex2.cpp  ex3.cpp
Practic_9/ex1/: CMakeLists.txt  main.cpp  module.cpp  module.h
Practic_9/ex2/: main.cpp  module.cpp  module.h
Practic_9/ex3/: main.cpp  module.cpp  module.h
